--- a/stylesheet.css
+++ b/stylesheet.css
@@ -27,7 +27,7 @@ body{
     grid-template-rows: repeat(10,100px);
     grid-template-columns: repeat(20,100px);
 }
-/* .animation .box{
+.animation .box{
     height: 100px;
     opacity: 1;
     scale: 1;
@@ -35,7 +35,7 @@ body{
     background-color: white;
     transition: 200ms;
     z-index: 10;
-} */
+}
 /* .animation .box:hover{
     filter: opacity(0.3);
     scale: 1;
@@ -57,6 +57,15 @@ nav ul li a{
     font-family: "Roboto", sans-serif;
     padding: 10px 20px;
     font-size: 1.5rem;
+    color: white;
+    text-decoration: none;
+  
+
+}
+a:hover{
+  cursor: progress;
+  transition: 200ms;
+  border-bottom: solid 4px blueviolet;
 }
 
 .root{
@@ -171,7 +180,9 @@ nav ul li a{
     .root {
       max-width: 1536px;
     }
+    
   }
+
 
 
 
