--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 
 
 
@@ -56,11 +57,16 @@ nav ul li{
 nav ul li a{
     font-family: "Roboto", sans-serif;
     padding: 10px 20px;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     color: white;
     text-decoration: none;
-  
 
+}
+nav ul li{
+  border-right: solid 2px white;
+}
+nav ul li:last-child{
+  border-right: none;
 }
 a:hover{
   cursor: progress;
@@ -88,22 +94,30 @@ a:hover{
     align-items: center;
 }
 .tempimg{
-    height: 250px;
+    /* height: 250px;
     width: 250px;
-    background-color: white;
-    transform: rotate(45deg);
-    border-radius: 5px;
-    animation: profile_imgb 5s 2s infinite linear;
+    background-color: white; */
+    /* transform: rotate(45deg); */
+    /* border-radius: 5px; */
+    /* animation: profile_imgb 5s 2s infinite linear; */
     transition: 200ms;
-    overflow: hidden;
-    box-shadow: 0px 0px 10px 5px white;
+    /* overflow: hidden; */
+    /* box-shadow: 0px 0px 10px 5px white; */
     display: flex;
     justify-content: center;
     align-items: center;
+    background-size: cover;
+    z-index: 1;
 
 }
+.temp1{
+  background-color: transparent;
+  z-index: -2;
+  border: solid 10px white;
+  
+}
 .tempimg img{
-    animation: profile_img 5s 2s infinite linear;
+    /* animation: profile_img 5s 2s infinite linear; */
     transition: 200ms;
     rotate: -45deg;
     width: 350px;
@@ -113,32 +127,10 @@ a:hover{
     transform: translateX(10px);
 
 }
-@keyframes profile_img {
-    0%{rotate: -45deg;filter: hue-rotate(0deg);}
-    10%{rotate: -45deg;filter: hue-rotate(0deg);}
-    20%{rotate: -45deg;filter: hue-rotate(0deg);}
-    30%{rotate: -45deg;filter: hue-rotate(0deg);}
-    40%{rotate: -45deg;filter: hue-rotate(0deg);}
-    50%{rotate: -45deg;filter: hue-rotate(0deg);}
-    60%{rotate: -405deg;filter: hue-rotate(0deg);}
-    70%{rotate: 315deg;filter: hue-rotate(180deg);}
-    80%{rotate: 315deg;filter: hue-rotate(360deg);}
-    90%{rotate: 315deg;filter: hue-rotate(180deg);}
-    100%{rotate: -45deg;filter: hue-rotate(0deg);}
-}
-
-@keyframes profile_imgb {
-    0%{rotate: 0deg;border-radius: 5px;}
-    10%{rotate: 0deg;border-radius: 5px;}
-    20%{rotate: 0deg;border-radius: 5px;}
-    30%{rotate: 0deg;border-radius: 5px;}
-    40%{rotate: 0deg;border-radius: 5px;}
-    50%{rotate: 0deg;border-radius: 5px;}
-    60%{rotate: 360deg;border-radius: 150px;}
-    70%{rotate: -360deg;border-radius: 150px;}
-    80%{rotate: -360deg;border-radius: 150px;}
-    90%{rotate: -360deg;border-radius: 150px;}
-    100%{rotate: 0deg;border-radius: 5px;}
+.introtext{
+  font-family: "Poppins", sans-serif;
+  letter-spacing: 0px;
+  margin-top: 70px;
 }
 
 @media (min-width: 475px) {
